# kinema

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  NOTICE  PRD.md  README.md  TESTING.md  run.sh
data/: CMakeLists.txt  dev.tlmtech.kinema.desktop  dev.tlmtech.kinema.metainfo.xml  kinema.notifyrc
data/kinema/mpv/: input.conf  mpv.conf
src/: CMakeLists.txt  main.cpp  tray_resources.qrc
src/api/: AllDebrid.h  AllDebridClient.cpp  AllDebridClient.h  AllDebridParse.cpp  AllDebridParse.h  CinemetaClient.cpp  CinemetaClient.h  CinemetaParse.cpp  CinemetaParse.h  Debrid.cpp  Debrid.h  Discover.h  Download.cpp  Download.h  Indexer.cpp  Indexer.h  IndexerSelector.cpp  IndexerSelector.h  Library.h  Media.h  MediaFusionIndexer.cpp  MediaFusionIndexer.h  MediaFusionParse.cpp  MediaFusionParse.h  OpenSubtitlesClient.cpp  OpenSubtitlesClient.h  OpenSubtitlesParse.cpp  OpenSubtitlesParse.h  PeerflixIndexer.cpp  PeerflixIndexer.h  PlaybackContext.cpp  PlaybackContext.h  QueueItem.h  RealDebrid.h  RealDebridClient.cpp  RealDebridClient.h  RealDebridParse.cpp  RealDebridParse.h  StremioStreamParse.cpp  StremioStreamParse.h  (+14 more)
src/app/: KinemaApplication.cpp  KinemaApplication.h  ServiceContainer.cpp  ServiceContainer.h
src/config/: AppSettings.cpp  AppSettings.h  AppearanceSettings.cpp  AppearanceSettings.h  BrowseSettings.cpp  BrowseSettings.h  CacheSettings.cpp  CacheSettings.h  Config.cpp  Config.h  ConfigAccess.h  DebridSettings.cpp  DebridSettings.h  DownloadSettings.cpp  DownloadSettings.h  FilterSettings.cpp  FilterSettings.h  IndexerSettings.cpp  IndexerSettings.h  LibrarySettings.cpp  LibrarySettings.h  MediaFusionSettings.cpp  MediaFusionSettings.h  PeerflixSettings.cpp  PeerflixSettings.h  PlayerSettings.cpp  PlayerSettings.h  RealDebridSettings.cpp  RealDebridSettings.h  SearchSettings.cpp  SearchSettings.h  SubtitleSettings.cpp  SubtitleSettings.h  TorrentStreamingSettings.cpp  TorrentStreamingSettings.h  TorrentioSettings.cpp  TorrentioSettings.h
src/controllers/: DebridCredentialsResolver.cpp  DebridCredentialsResolver.h  DownloadController.cpp  DownloadController.h  HistoryController.cpp  HistoryController.h  LibraryController.cpp  LibraryController.h  MovieDetailController.cpp  MovieDetailController.h  MprisController.cpp  MprisController.h  NavigationController.cpp  NavigationController.h  Page.h  PlayQueueController.cpp  PlayQueueController.h  PlaybackController.cpp  PlaybackController.h  PlaybackLoadWatchdog.cpp  PlaybackLoadWatchdog.h  SearchController.cpp  SearchController.h  SeriesDetailController.cpp  SeriesDetailController.h  SeriesPlaybackSessionController.cpp  SeriesPlaybackSessionController.h  SubtitleController.cpp  SubtitleController.h  TokenController.cpp  TokenController.h  TrayController.cpp  TrayController.h  WatchedController.cpp  WatchedController.h
src/core/: CachePaths.cpp  CachePaths.h  CheatSheetText.cpp  CheatSheetText.h  Database.cpp  Database.h  DateFormat.cpp  DateFormat.h  DateWindow.cpp  DateWindow.h  DownloadStore.cpp  DownloadStore.h  HistoryStore.cpp  HistoryStore.h  HttpClient.cpp  HttpClient.h  HttpError.h  HttpErrorPresenter.cpp  HttpErrorPresenter.h  IdleInhibitor.cpp  Language.cpp  Language.h  LibraryStore.cpp  LibraryStore.h  Logging.cpp  Magnet.cpp  Magnet.h  MediaCache.cpp  MediaCache.h  MediaChips.cpp  Moviehash.cpp  MprisMetadata.cpp  MprisMetadata.h  MpvChapterList.cpp  MpvConfigPaths.cpp  MpvConfigPaths.h  MpvIpc.cpp  MpvIpc.h  MpvTrackList.cpp  MpvTrackList.h  (+28 more)
src/core/io/: CachePaths.cpp  HttpClient.cpp  HttpClient.h  HttpError.h  HttpErrorPresenter.cpp  HttpErrorPresenter.h  IdleInhibitor.cpp  IdleInhibitor.h  Logging.cpp  Logging.h  OpenUrl.cpp  OpenUrl.h  UrlRedactor.cpp
src/core/mpv/: MprisMetadata.cpp  MprisMetadata.h  MpvChapterList.cpp  MpvChapterList.h  MpvConfigPaths.cpp  MpvTrackList.cpp  MpvTrackList.h  Player.cpp  Player.h  PlayerLauncher.cpp  PlayerLauncher.h
src/core/persistence/: Database.cpp  Database.h  DownloadStore.cpp  DownloadStore.h  HistoryStore.cpp  HistoryStore.h  LibraryStore.cpp  LibraryStore.h  MediaCache.cpp  SqlUtil.h  SubtitleCacheStore.cpp  SubtitleCacheStore.h  TokenStore.cpp  TokenStore.h  (+4 more)
src/domain/: AllDebrid.h  Debrid.cpp  Debrid.h  DebridCredentials.cpp  DebridCredentials.h  Discover.h  Download.cpp  Download.h  Indexer.cpp  Indexer.h  Library.h  Media.h  PlaybackContext.cpp  PlaybackContext.h  RealDebrid.h  Subtitle.h
src/download/: AllDebridBackend.cpp  AllDebridBackend.h  AllDebridResolver.cpp  AllDebridResolver.h  AssetSession.cpp  AssetSession.h  BackendSelector.cpp  BackendSelector.h  DebridFilePicker.cpp  DebridFilePicker.h  DebridResolver.h  DownloadBackend.h  DownloadManager.cpp  DownloadManager.h  HttpAssetSession.cpp  HttpAssetSession.h  LocalMediaServer.cpp  LocalMediaServer.h  RealDebridBackend.cpp  RealDebridBackend.h  RealDebridResolver.cpp  RealDebridResolver.h  TorrentAssetSession.cpp  TorrentAssetSession.h  TorrentBackend.cpp  TorrentBackend.h
src/services/: StreamActions.cpp  StreamActions.h  StreamAvailabilityService.cpp  StreamAvailabilityService.h
src/torrent/: LocalStreamServer.cpp  LocalStreamServer.h  MediaFileSelector.cpp  MediaFileSelector.h  PiecePlanner.cpp  PiecePlanner.h  TorrentStreamingService.cpp  TorrentStreamingService.h
src/ui/: BrowseFilterBar.cpp  BrowseFilterBar.h  BrowsePage.cpp  BrowsePage.h  ContinueWatchingCardDelegate.cpp  ContinueWatchingCardDelegate.h  ContinueWatchingSection.cpp  ContinueWatchingSection.h  DetailPane.cpp  DetailPane.h  DiscoverCardDelegate.cpp  DiscoverCardDelegate.h  DiscoverGridView.cpp  DiscoverGridView.h  DiscoverPage.cpp  DiscoverPage.h  DiscoverRowModel.cpp  DiscoverRowModel.h  DiscoverSection.cpp  DiscoverSection.h  EpisodeDelegate.cpp  EpisodeDelegate.h  EpisodesModel.cpp  EpisodesModel.h  ImageLoader.cpp  ImageLoader.h  MainWindow.cpp  MainWindow.h  RealDebridDialog.cpp  RealDebridDialog.h  ResultCardDelegate.cpp  ResultCardDelegate.h  ResultsModel.cpp  ResultsModel.h  SearchBar.cpp  SearchBar.h  SeriesDetailPane.cpp  SeriesDetailPane.h  SeriesFocusView.cpp  SeriesFocusView.h  (+10 more)
(+471 files in other folders)
